2007-03-12	Joel Sherrill <joel@OARcorp.com>

	* au1x00/include/au1x00.h, au1x00/vectorisrs/maxvectors.c,
	au1x00/vectorisrs/vectorisrs.c: Correct license URL and/or fix
	mistake in copyright notice. Both of these mistakes appear to be from
	code submitted after these changes were made previously.

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-10-19	Joel Sherrill <joel@OARcorp.com>

	* mongoosev/duart/mg5uart.c: Change type to unsigned.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.60. Require automake-1.10.

2006-09-14	Joel Sherrill <joel@OARcorp.com>

	* mongoosev/duart/mg5uart.c: Removed warnings.

2006-09-11	Joel Sherrill <joel@OARcorp.com>

	* mongoosev/vectorisrs/vectorisrs.c: Convert C++ style comments to C
	style.

2006-06-08	Bruce Robinson <brucer@pmccorp.com>

	* Makefile.am: add interruptmask.c
	* shared/interrupts/interuptmask.c: TX49 conditional mask computation
	* shared/interrupts/vectorexceptions.c: Corrections to exception codes 
	   & descriptions

2006-05-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Use RTEMS_AMPOLISH3.
2006-04-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove bogus CFLAGS_OPTIMIZE_V.

2006-03-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* shared/interrupts/vectorexceptions.c: Merger with submission from
	Bruce Robinson <brucer@pmccorp.com>.
	Make some arrays static const.

2006-03-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am, configure.ac: Reflect addition of rm52xx, tx49.
	* rm52xx/include/rm5231.h, rm52xx/vectorisrs/maxvectors.c,
	rm52xx/vectorisrs/vectorisrs.c, tx49/include/tx4925.h, 
	tx49/include/tx4938.h, tx49/vectorisrs/maxvectors.c,
	tx49/vectorisrs/vectorisrs.c:
	New (Submission by Bruce Robinson <brucer@pmccorp.com>).

2005-11-04	Ralf Corsepius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_CHECK_CUSTOM_BSP.
	* Makefile.am: Distibute mongoosev's READMEs
