@@ -1,3 +1,9 @@
+2007-11-26	Joel Sherrill <joel.sherrill@oarcorp.com>
+
+	* clock/ckinit.c: Eliminate the clicks_per_microsecond field in the
+	MIPS CPU Table and define another mechanism for drivers to obtain
+	this information.
+
 2007-03-12	Joel Sherrill <joel@OARcorp.com>
 
 	* au1x00/include/au1x00.h, au1x00/vectorisrs/maxvectors.c,
